feat(getMemberBuildingSubscriptionList): 구독 제공자 정보 추가
Related to: #190